un sacco di roba

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -26,14 +26,10 @@
 	\href{mailto:filippo.barbari@studio.unibo.it}{Filippo Barbari},
 	\href{mailto:filippo.barbari@studio.unibo.it}{Emanuele Lamagna}
 }
-\date{2 ottobre 2022}
+\date{\today}
 
 \begin{document}
 	\maketitle
-	
-	\begin{abstract}
-		Brief summary. (non so se ci server)
-	\end{abstract}
 	
 	\tableofcontents
 	\clearpage
@@ -53,6 +49,9 @@
     \end{legal}
 
 	\subsection{Requisiti utente}
+	Filippo Benvenuti, che riveste il ruolo di Product Owner e Committente all'interno di questo progetto, ha richiesto un sistema che rispetti le seguenti caratteristiche:
+	
+	Dalla
 	\begin{legal}[label*=2.\arabic*.]
     	\item osservare in tempo reale le interazioni tra le varie specie e il loro ciclo di vita, aggiungendo e rimuovendo pesci
     	\item i dati di ogni pesce verranno memorizzati all’interno di un database
