requisiti non funzionali/implementazione

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -214,13 +214,29 @@
 
 	\subsection{Requisiti non funzionali}
 	\begin{legal}[label*=4.\arabic*.]
-		\item deve essere fast
+		\item GUI responsiva
+		\item usabilità
+		\item semplice installazione cross-platform
 	\end{legal}
     
     \subsection{Requisiti di implementazione}
     \begin{legal}[label*=5.\arabic*.]
-    	\item monadi
-    	\item flyweight (tipo un sacco)
+    	\item scala
+%    	\begin{legal}
+%    		\item monadi
+%    		\item flyweight
+%    	\end{legal}
+    	\item scalafx
+    	\item scala-test
+    	\item prolog
+    	\item git
+    	\begin{legal}
+    		\item github
+    		\item github project
+    		\item github action
+    	\end{legal}
+    	\item sbt
+    	
     \end{legal}
     
     \section{Design dell'architettura}
