--- a/doc/report.tex
+++ b/doc/report.tex
@@ -21,10 +21,10 @@
 
 \title{Aquarium Simulator}
 \author{
-	\href{mailto:filippo.barbari@studio.unibo.it}{Elisa Albertini},
-	\href{mailto:filippo.barbari@studio.unibo.it}{Filippo Benvenuti},
+	\href{mailto:elisa.albertini3@studio.unibo.it}{Elisa Albertini},
+	\href{mailto:filippo.benvenuti3@studio.unibo.it}{Filippo Benvenuti},
 	\href{mailto:filippo.barbari@studio.unibo.it}{Filippo Barbari},
-	\href{mailto:filippo.barbari@studio.unibo.it}{Emanuele Lamagna}
+	\href{mailto:emanuele.lamagna@studio.unibo.it}{Emanuele Lamagna}
 }
 \date{\today}
 
@@ -100,39 +100,39 @@
 	\begin{legal}[label*=2.\arabic*.]
     	\item osservare in tempo reale:
     	\begin{legal}
-    		\item ciclo di vita dei pesci.
-    		\item interazioni fra pesci.
-    		\item interazioni fra pesci e vegetazione.
+    		\item ciclo di vita dei pesci
+    		\item interazioni fra pesci
+    		\item interazioni fra pesci e vegetazione
     	\end{legal}
-    	\item aggiungere e rimuovere pesci in tempo reale.
+    	\item aggiungere e rimuovere pesci in tempo reale
     	\item memorizzazione dati dell'acquario all’interno di un database:
     	\begin{legal}
-    		\item possibilità di estrarre informazioni interessanti.
-    		\item visionare grafici sull'andamento dei dati salvati.
+    		\item possibilità di estrarre informazioni interessanti
+    		\item visionare grafici sull'andamento dei dati salvati
     	\end{legal}
     	\item visualizzazione in tempo reale di:
     	\begin{legal}
-    		\item numero di esseri viventi divisi per specie.
-    		\item temperatura dell’acqua.
-    		\item luce.
-    		\item pH dell’acqua.
-    		\item impurit\'a dell’acqua.
-    		\item ossigeno.
+    		\item numero di esseri viventi divisi per specie
+    		\item temperatura dell’acqua
+    		\item luminosità
+    		\item pH dell’acqua
+    		\item impurit\'a dell’acqua
+    		\item ossigeno
     	\end{legal}
     	\item interazione con la simulazione tramite:
     	\begin{legal}
-    		\item aggiunta cibo.
-    		\item regolazione termostato.
+    		\item aggiunta cibo
+    		\item regolazione termostato
     		%\item sostituzione filtro dell’acqua.
-    		\item pulizia acquario.
-    		\item regolazione illuminazione.
-    		\item play/stop della simulazione.
+    		\item pulizia acquario
+    		\item regolazione illuminazione
+    		\item play/stop della simulazione
     	\end{legal}
     	\item Opzionali per il futuro:
     	\begin{legal}
-    		\item pesce controllabile manualmente dall’utente.
-    		\item estrazione dell’albero genealogico di ogni pesce dal database.
-    		\item salvataggio/caricamento della simulazione.
+    		\item pesce controllabile manualmente dall’utente
+    		\item estrazione dell’albero genealogico di ogni pesce dal database
+    		\item salvataggio/caricamento della simulazione
     		\item velocizzare/rallentare la simulazione
     	\end{legal}
     \end{legal}
@@ -221,19 +221,19 @@
     
     \subsection{Requisiti di implementazione}
     \begin{legal}[label*=5.\arabic*.]
-    	\item scala
+    	\item Scala
 %    	\begin{legal}
 %    		\item monadi
 %    		\item flyweight
 %    	\end{legal}
-    	\item scalafx
-    	\item scala-test
-    	\item prolog
-    	\item git
+    	\item ScalaFX
+    	\item ScalaTest
+    	\item Prolog
+    	\item Git
     	\begin{legal}
-    		\item github
-    		\item github project
-    		\item github action
+    		\item GitHub
+    		\item GitHub Projects
+    		\item GitHub Actions
     	\end{legal}
     	\item sbt
     	
